--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/darwinj94506/generador-ideas.git"
+  },
   "dependencies": {
     "awilix": "^4.3.4",
     "bcryptjs": "^2.4.3",
