--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=500
-MONGO_URI="mongo uri"
+MONGO_URI="mongodb+srv://darwin:darwin123@cluster0.si7zd.mongodb.net/ideasdb?"
 APPLICATION_NAME="SHARE YOUR IDEA"
