--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
+    "eslint": "^7.28.0",
     "jest": "^27.0.4",
     "mockingoose": "^2.15.2",
     "nodemon": "^2.0.7"
